--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Github pages test</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Github page hosting test</title>
+  <link rel="stylesheet" href="">
+</head>
+<body>
+  <h1>this is a test</h1>
+</body>
+</html>
